# camera_map

./: .gitignore  CMakeLists.txt  GaussEliminationWithPivoting.hpp  LinearEquationsTest.cpp  README.md  cam_map.hpp  cam_map_test.cc  extract_feature_points.cc  map.xml  map_calibrate.cc
PCA-KNN/: Num_reco.cpp  main.cpp
armorDetection/: ArmorDetect.cpp  light_detection.cpp
armor_ros/: CMakeLists.txt  package.xml
armor_ros/include/armor/: AnglePre.hpp  GetLight.hpp  MatchLight.hpp  Robust.hpp
armor_ros/include/distance/: ArmorPlate.hpp  LightMatch.hpp
armor_ros/include/universal/: CameraCtl.hpp  GetPos.hpp  GimbalCtrl.hpp
armor_ros/src/: ArmorDetect.cpp  DistantDetect.cpp  HPGrabbing.cpp  test_frame.cpp
armor_ros/xmlFiles/: pitch.xml  pitch_2.xml  yaw.xml  yaw_2.xml
bundleAdjust/: CMakeLists.txt  ba_demo.cpp  ba_g2o.cc  curve_fitting.cpp
bundleAdjust/cmake_modules/: FindG2O.cmake
camera_ctl/: CameraCtl.cc  GrabOpenCV.cc  HPGrabbing.cpp  save_video.cc  test_frame.cpp
car_match/: requirements.txt  run.sh
car_match/data/: data.csv  data1.csv  data_augmentation.py  data_car.csv  data_disp1500.csv  drawer.cc  enhance.py  enhanced.csv  transformer.csv  transformer.py
car_match/inference/: inference.py  test.py
car_match/model/: attention.py  car_match.py  dataset.py  general_model.py  hooks.py  model_config.py  tf_lite_convert.py  tf_test.py  tools.py  train.py
car_match/saved_model/: saved_model.pb
car_match/saved_model/variables/: variables.data-00000-of-00001  variables.index
distantDetection/: ArmorPlate.hpp  DistantDetect.cpp  LightMatch.hpp
include/: ArmorPlate.hpp  ArmorPlate.old.hpp  CameraCtl.hpp  CameraParam.h  Matrix.hpp  cam_map.hpp
judge_detection/: CMakeLists.txt  judge_detection.cc
judge_detection/include/: Judge.hpp  LightMatch.hpp
pose_estimation/: CMakeLists.txt  homography_solver  main.cc  pnp_solver  pnp_solver.cc  pose_estimate.cc  use_homography.cc  viewer
pose_estimation/include/: ArmorPlate.hpp  CameraParam.cc  Drawer.h  GetPos.hpp  LightMatch.hpp  MatchLight.hpp  Robust.hpp  Viewer.h  frame.h  homography_solver.h
pose_estimation/include/src/: Drawer.cc
pose_estimation/src/: Drawer.cc  Viewer.cc  frame.cc  homography_solver.cc
pose_solver/: CMakeCache.txt  CMakeLists.txt  CMakeLists2.txt  Makefile  README.md  SubPixelOpt.cc  cmake_install.cmake  codes.sh  data_process.cpp  dataset_generator.cc  fp3d.txt  mlp.xml  pose_estimate.cc  sampling.cc  test  traced_model.pt  viewer  vscode_git_tutorial.md
pose_solver/cmake_modules/: FindG2O.cmake
pose_solver/include/: AimDeps.cc  AimDeps.hpp  ArmorPlate.hpp  BundleAdjust.hpp  CarMatch.hpp  CarModule.hpp  Drawer.h  ErrorTerm.hpp  GetPos.hpp  GimbalCtrl.hpp  LOG.hpp  LightMatch.hpp  MatchLight.hpp  NNSearch.hpp  NumRec.hpp  PoseSolver.hpp  Ruler.hpp  Viewer.h  ba_g2o.hpp  newCarModule.hpp  params.hpp  sampling.hpp
pose_solver/include/branch/: AimDeps.cc  ArmorPlate.hpp  GetPos.hpp  GimbalCtrl.hpp  LightMatch.hpp
pose_solver/src/: AimDeps.cc  ArmorPlate.cc  Car.cc  CarMatch.cc  CarModule.cc  Drawer.cc  ErrorCtl.cc  GetPos.cc  GimbalCtrl.cc  LOG.cc  LightMatch.cc  NNSearch.cc  Optimization.cc  PoseSolver.cc  Sampling.cc  Viewer.cc  newCar.cc  newCarModule.cc  params.cc
self-targeting/: CMakeCache.txt  CMakeLists.txt  DistantDetect.cpp  Makefile  ballistic_model.txt
self-targeting/include/detection/: ArmorPlate.hpp
self-targeting/include/universal/: CameraCtl.hpp  GetPos.hpp
self_targeting/: CMakeLists.txt  Task1  ballistic_model.md  testAngle.cpp
self_targeting/include/detection/: ArmorPlate.hpp  LightMatch.hpp
self_targeting/include/universal/: CameraParam.cc  GetPos.hpp  GimbalCtrl.hpp  Numrcgn.hpp  knn.xml  pca.xml
